[package]
name = "ghost-scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghost-scanner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
hex = "0.4"
sha3 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tokio-stream = "0.1"
async-trait = "0.1"
url = "2"
clap = { version = "4", features = ["derive"] }
colored = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
