[package]
name = "ghost-scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghost-scanner"
path = "src/bin/hexora-scan.rs"

[[bin]]
name = "hexora-verify"
path = "src/bin/hexora-verify.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-stream = "0.1"
futures-util = "0.3"
axum = "0.7"
fastrand = "2.0"  # Para mutations aleatórias
ethers = { version = "2.0", features = ["rustls"] }
dotenv = "0.15"


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP/WebSocket client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }

# Logging & errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"

# Crypto & encoding
hex = "0.4"
sha3 = "0.10"
rand = "0.8"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Data structures
dashmap = "6"
lru = "0.12"

# Async traits
async-trait = "0.1"

# URL parsing
url = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Colors (opcional, para output bonito)
colored = "2"

# Para parse de números hexadecimais grandes (usado no u256)
num-bigint = "0.4"
num-traits = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
